--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>Travelling Site</title>
+    <link rel="icon" type="image/x-icon" href="./image/fav.jpg">
+    <title>GlobeX</title>
 </head>
 <body>
 <div class="main">
     <div class="container">
         <div class="navbar">
-            <h2 class="logo">ADITYA</h2>
+            <h2 class="logo">GlobeX</h2>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -28,11 +29,11 @@
         <h1>next adventure</h1>
         <h3>Let us plan it for you</h3>
         <div class="booking">
-            <button id="btn">BOOK NOW</button>
+            <a href="login.html"><button id="btn">BOOK NOW</button></a>
         </div>
     </div>
 </div>
-<!----------------------------------------------second------------------------------------------------->
+<!----------------------------------------------about------------------------------------------------->
 <div id="about">
     <div class="about-container">
         <div class="content">
@@ -48,7 +49,7 @@
         </div>
     </div>
 </div>
-<!------------------------------------------------third----------------------------------------------->
+<!------------------------------------------------deals----------------------------------------------->
 <div id="deals">
     <h1 class="heading">Summer Deals Promo</h1>
     <div class="wrapper">
@@ -177,7 +178,7 @@
             <div class="overlay">
                 <div class="text">
                     <h2><span><i class="fa-solid fa-location-dot"></i></span> Let's plan your next trip</h2>
-                    <h1>Aditya Tours & Travels</h1>
+                    <h1>GlobeX Tours & Travels</h1>
                     
                 </div>
             </div>
@@ -213,7 +214,7 @@
 <!------------------------------------------------footer----------------------------------------------->
 <div id="footer">
     <div class="copyright">
-        <p>©2024 Aditya tours & travels. All rights reserved</p>
+        <p>©2024 GlobeX. All rights reserved</p>
     </div>
 </div>
 </body>
